# loop-engineering

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
references/: full-loop-contract.md  labels.md  product-os.md  product-planning.md  repo-policy.md  state-machine.md
scripts/: loop_comment.py  loop_gh_issue_state.py  loop_gh_milestone.py  loop_gh_pr_state.py  loop_labels.py  loop_product_os.py  loop_repo_policy.py
skills/loop-close/: SKILL.md
skills/loop-engineer-issue/: SKILL.md
skills/loop-intake-quality/: SKILL.md
skills/loop-product-init/: SKILL.md
skills/loop-product-review/: SKILL.md
skills/loop-recover/: SKILL.md
skills/loop-review-pr/: SKILL.md
skills/loop-roadmap-update/: SKILL.md
skills/loop-spec-feature/: SKILL.md
skills/loop-split-feature/: SKILL.md
skills/loop-triage/: SKILL.md
templates/: pull-request.md
templates/comments/: blocked.md  final-summary.md  review-summary.md  run.md  triage-question.md
tests/: test_comment.py  test_gh_issue_state.py  test_gh_milestone.py  test_gh_pr_state.py  test_labels.py  test_product_os.py  test_repo_policy.py
tests/fixtures/: issue.json  pr.json
